--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/signals": "^1.0.1",
     "react": "^18.2.0",
+    "signals": "^1.0.0",
     "typescript": "^4.4.2"
   }
 }
