--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react": "^18.2.0",
     "signals": "^1.0.0",
     "typescript": "^4.4.2"
+  },
+  "scripts": {
+    "dev": "yarn --cwd src/web start"
   }
 }
