--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^28.1.6",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/signals": "^1.0.1",
+    "jest": "^28.1.3",
     "react": "^18.2.0",
     "signals": "^1.0.0",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "dev": "yarn --cwd src/web start"
+    "dev": "yarn --cwd src/web start",
+    "test": "jest"
   }
 }
