--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/signals": "^1.0.1",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "signals": "^1.0.0",
@@ -18,6 +20,13 @@
   },
   "scripts": {
     "dev": "yarn --cwd src/web start",
-    "test": "jest"
+    "test": "jest",
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
