--- a/src/web/package.json
+++ b/src/web/package.json
@@ -58,7 +58,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js"
   },
   "eslintConfig": {
     "extends": [
